# whylogs-container-examples

./: Makefile  README.md  data.csv  example.py  mypy.ini  pyproject.toml  requirements.txt
